# fivexx

./: .gitignore  Cargo.toml  LICENSE
src/: adapters.rs  column_mappings.rs  commands.rs  config.rs  formatters.rs  main.rs  parallel_querier.rs  parsers.rs  query.rs
src/adapters/: aws_athena_adapter.rs  new_relic_log_adapter.rs
src/adapters/aws_athena_adapter/: client.rs  query_builder.rs  query_executor.rs  query_result_fetcher.rs  query_result_processor.rs  query_status_checker.rs
src/adapters/new_relic_log_adapter/: query_builder.rs  query_executor.rs
src/commands/: configure.rs  query.rs
src/formatters/: csv_formatter.rs  json_formatter.rs
src/parsers/: dataset_parser.rs  date_time_parser.rs  domain_parser.rs  duration_parser.rs  query_parser.rs
