[package]
name = "fivexx"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.47.0"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.21"
chrono = "0.4.38"
clap = { version = "^4.5.19", features = ["derive"] }
http = "1.1.0"
serde_json = "^1.0.128"
serde = { version = "^1.0.210", features = ["derive"] }
aws-smithy-runtime-api = "1.7.2"
regex = "1.11.0"
inquire = "0.7.5"
confy = "0.6.1"
